# angin

./: .gitignore  README.md  getaran.csv  main.py  pyproject.toml
angin/: main.py
contoh/: data.csv  zimmerman.csv
getaran/: frek.py  helper.py
getaran/command/: hitung_fm.py  hitung_lsce.py  hitung_mitd.py  olah_riv.py  plot_getaran.py
statistik/: angin.py
