[tool.poetry]
name = "angin"
version = "0.1.0"
description = "Olah data angin BMKG"
authors = ["akbarpn136 <akbarpn136@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^0.19.19"
xlsxwriter = "^3.1.9"

[tool.poetry.scripts]
dev = "angin.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
