[tool.poetry]
name = "angin"
version = "0.1.0"
description = "Olah data angin BMKG"
authors = ["akbarpn136 <akbarpn136@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^0.19.19"
xlsxwriter = "^3.1.9"
pandas = "^2.1.4"
numpy = "^1.26.2"
scipy = "^1.11.4"
prettytable = "^3.9.0"
typer = { extras = ["all"], version = "^0.9.0" }

[tool.poetry.scripts]
jembatan = "angin.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
