[project]
name = "cobauv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "mpire>=2.10.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "polars>=1.10.0",
    "prettytable>=3.11.0",
    "pyqt6>=6.7.1",
    "scienceplots>=2.1.1",
    "scipy>=1.14.1",
    "tqdm>=4.66.5",
    "typer>=0.12.5",
    "xlsxwriter>=3.2.0",
]
